src/scss/includes/about/services.scss
.services {
    margin-top: 46px;
    position: relative;
    overflow: hidden;
    &::before {
        @extend %fabric;
        transform: translate(-50%, -20%);
        opacity: 0.5;
        @media (max-width: $phone + px) {
            display: none;
        }
    }
    // .services__container
    &__container {
        position: relative;
        &::before {
            @extend %blurry-dot;
            left: -60%;
            top: 50%;
            transform: translate(0, -75%);
            @media (max-width: $phone + px) {
                // @include size(300);
                left: -70%;
                // filter: blur(100px);
                // transform: translate(0, 0);
            }
            @media (max-width: $smallPhone + px) {
                left: -50%;
            }
        }
        &::after {
            @extend %blurry-dot;
            bottom: 0;
            right: -60%;
        }
    }
    // .services__text
    &__text {
        max-width: pc(400, $maxWidthContainer);
        margin: 0 auto;
        margin-bottom: 80px;
        @media (max-width: $phone + 200  + px) {
            max-width: 80%;
        }
    }
    // .services__list
    &__list {
        display: flex;
        flex-direction: column;
        position: relative;
    }
    // .services__list-item
    &__list-item {
        max-width: pc(720, $maxWidthContainer);
        &:nth-child(odd) {
            align-self: start;
        }
        &:nth-child(even) {
            align-self: end;
        }
        &:not(:last-child) {
            margin-bottom: 100px;
            @media (max-width: $smallPhone + px) {
                margin-bottom: 60px;
            }
        }
        @media (max-width: 1200 + px) {
            max-width: none;
        }
    }
    // .services__service
    &__service {
    }
}
.service {
    display: flex;
    column-gap: 37px;
    // .service__image
    &__image {
        position: relative;
        @include size(286);
        flex-shrink: 0;
        @media (max-width: $phone + 200 + px) {
            @include size(200);
        }
        @media (max-width: $phone - 1+ px) {
            @include size(144);
        }
        @media (max-width: $smallPhone + px) {
            margin-bottom: 10px;
        }
        &::before {
            content: "";
            position: absolute;
            width: 100%;
            height: 100%;
            border-radius: 50%;
            border: 1px solid $lightBlue;
        }
        img {
            position: absolute;
            bottom: pc(50, 286);
            left: 50%;
            transform: translate(-50%, 0);
            max-width: 100%;
            max-height: 120%;
        }
    }
    &__body {
        flex-grow: 1;
    }
    // .service__title
    &__title {
        font-size: 54px;
        line-height: math.div(91, 54);
        font-family: PhillippScript;
        color: $darkBlue;
        @media (max-width: $smallPhone + px) {
            font-size: 36px;
            text-align: right;
            margin-bottom: 15px;
        }
    }
    // .service__text
    &__text {
        &:not(:last-child) {
            margin-bottom: 10px;
        }
    }
    // .service__button
    &__button {
    }
}

